relocation of index file.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Bootstrap CDN-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!--Native stylesheet reference-->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
     <!--GFonts CDN-->
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
     <!--Font Awesome CDN-->
@@ -31,25 +31,25 @@
 <script type="text/javascript" src="https://code.angularjs.org/1.5.8/angular-route.min.js"></script>
 
 <!--Angular Application Injection-->
-<script type="text/javascript" src="../js/index.js"></script>
+<script type="text/javascript" src="public/js/index.js"></script>
 
 <!--Injection of Angular modules-->
 
-<script type="text/javascript" src="../js/welcome.js"></script>
-<script type="text/javascript" src="../js/contact.js"></script>
-<script type="text/javascript" src="../js/blog.js"></script>
-<script type="text/javascript" src="../js/portfolio.js"></script>
+<script type="text/javascript" src="public/js/welcome.js"></script>
+<script type="text/javascript" src="public/js/contact.js"></script>
+<script type="text/javascript" src="public/js/blog.js"></script>
+<script type="text/javascript" src="public/js/portfolio.js"></script>
 
 
 <!--CMS-->
-<script type="text/javascript" src="../js/login.js"></script>
-<script type="text/javascript" src="../js/contacts.js"></script>
-<script type="text/javascript" src="../js/managePortfolio.js"></script>
-<script type="text/javascript" src="../js/manageBlog.js"></script>
+<script type="text/javascript" src="public/js/login.js"></script>
+<script type="text/javascript" src="public/js/contacts.js"></script>
+<script type="text/javascript" src="public/js/managePortfolio.js"></script>
+<script type="text/javascript" src="public/js/manageBlog.js"></script>
 
 <!--Injection of Angular services-->
 
-<script type="text/javascript" src="../js/services/request.js"></script>
+<script type="text/javascript" src="public/js/services/request.js"></script>
 
 </body>
 </html>
